# wleird

./: README.md  attach-delta-loop.c  client.c  copy-fu.c  cursor.c  damage-paint.c  disobey-resize.c  frame-callback.c  gamma-blend.c  grid-layer-surface.c  meson.build  pool-buffer.c  resize-loop.c  resizor.c  resource-thief.c  sigbus.c  slow-ack-configure.c  subsurfaces.c  surface-outputs.c  unmap.c
include/: client.h  pool-buffer.h
protocol/: meson.build
